## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

tank_includedir = $(pkgincludedir)

tank_include_DATA = \
	StringTokenizer.h\
	Ptrsolit.h\
	Properties.h\
	Exceptions.h\
	Log.h\
	Safe.h\
	SharedPointer.h\
	Surface.h\
	SpriteSequence.h\
	Screen.h\
	Menu.h\
	Rectangle.h\
	Actor.h\
	Terrain.h\
	Global.h\
	SpriteHandler.h\
	TerrainFactory.h\
	Map.h\
	Movable.h\
	Point.h\
	Direction.h\
	Task.h\
	Arena.h\
	BaseTank.h\
	KeyHandler.h\
	HumanPlayer.h\
	Bullet.h\
	Weapon.h\
	Weapons.h\
	Explosion.h\
	Enemy.h\
	HumanDriver.h\
	Lagartas.h\
	Printable.h\
	Random.h\
	Tank.h\
	TankController.h\
	TankFactory.h\
	TankPart.h

EXTRA_DIST = $(tank_include_DATA)
