## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

CXXFLAGS =\
	 -Wall -Wimplicit -Wunused -Wmissing-prototypes\
	 -g

bin_PROGRAMS = tank

tank_SOURCES = \
	StringTokenizer.cpp\
	Properties.cpp\
	Safe.cpp\
	Surface.cpp\
	SpriteSequence.cpp\
	Screen.cpp\
	Rectangle.cpp\
	SpriteHandler.cpp\
	Terrain.cpp\
	Global.cpp\
	Actor.cpp\
	Map.cpp\
	Arena.cpp\
	Movable.cpp\
	Direction.cpp\
	BaseTank.cpp\
	HumanPlayer.cpp\
	Bullet.cpp\
	Weapon.cpp\
	Enemy.cpp\
	HumanDriver.cpp\
	Tank.cpp\
	main.cpp

tank_LDFLAGS = 

tank_LDADD = 

